[package]
name = "u-siem-enricher"
version = "0.1.0"
authors = ["Samuel Garcés <samuel.garces@protonmail.com>"]
license = "MIT"
description = "uSIEM log enricher"
repository = "https://github.com/u-siem/usiem-elasticsearch"
keywords = ["SIEM", "security", "logs"]
categories = ["parsing"]
edition = "2018"

[lib]
name = "usiem_enricher"
path = "src/lib.rs"

[dependencies]
u-siem = {version = "0"}