[package]
name = "u-siem-enricher"
version = "0.2.0"
authors = ["Samuel Garcés <samuel.garces@protonmail.com>"]
license = "MIT"
description = "uSIEM log enricher"
repository = "https://github.com/u-siem/usiem-enricher"
keywords = ["SIEM", "security", "logs"]
categories = ["parsing"]
edition = "2021"

[features]
default = ["metrics"]
metrics = []

[lib]
name = "usiem_enricher"
path = "src/lib.rs"

[dependencies]
coarsetime = "0.1.23"
u-siem = {version = "0"}
# Only for developing
#u-siem = {path = "../u-siem-core"}